fix ssl directory in template

--- a/environments/production/modules/apache/templates/vhost.conf.erb
+++ b/environments/production/modules/apache/templates/vhost.conf.erb
@@ -31,8 +31,8 @@
   CustomLog ${APACHE_LOG_DIR}/<%= @servername %>-ssl-access.log combined
 
   SSLEngine on
-  SSLCertificateFile <%= @cert_path %><%= @servername %>
-  SSLCertificateKeyFile <%= @key_path %><%= @cert_path %>
+  SSLCertificateFile <%= @cert_path %>/<%= @servername %>
+  SSLCertificateKeyFile <%= @key_path %>/<%= @cert_path %>
 </VirtualHost>
 
 <% else -%>
