fix ssl directory in template

--- a/environments/production/modules/apache/templates/vhost.conf.erb
+++ b/environments/production/modules/apache/templates/vhost.conf.erb
@@ -32,7 +32,7 @@
 
   SSLEngine on
   SSLCertificateFile <%= @cert_path %>/<%= @servername %>.crt
-  SSLCertificateKeyFile <%= @key_path %>/<%= @servername %>.crt
+  SSLCertificateKeyFile <%= @key_path %>/<%= @servername %>.key
 </VirtualHost>
 
 <% else -%>
